# .github

./: .gitignore  README.md  eslint.config.ts  justfile  package.json  pyproject.toml  pyrefly.toml  tsconfig.json  vitest.config.ts
.github/: CODEOWNERS
.github/workflows/: copilot-review-gate.yml  org_gate_base.yml
apps/apply-org-rulesets/: package.json  tsconfig.json
apps/apply-org-rulesets/src/: cli.ts  index.ts
apps/copilot-review-gate/: README.md  pyproject.toml
apps/copilot-review-gate/src/copilot_review_gate/: __init__.py  cli.py
docs/: copilot-review-gate.md
docs/roadmap/: workflows.md
profile/: README.md
rulesets/: default-branch-baseline.json
scripts/: copilot_review_gate.py
tests/: test_copilot_review_gate.py
tests/apply-org-rulesets/: fixtures.ts  package.json  tsconfig.json
tests/apply-org-rulesets/stories/: 1-apply-org-rulesets.md  1-apply-org-rulesets.test.ts
tests/copilot-review-gate/: test_copilot_review_gate.py
tests/copilot-review-gate/stories/: 1_pr-readiness.md  2_copilot-run.md  3_review-verdict.md  4_status-delivery.md  conftest.py  fixtures.py  test_1_pr-readiness.py  test_2_copilot-run.py  test_3_review-verdict.py  test_4_status-delivery.py
