[project]
name = "zyplux-github"
version = "0"
description = "Org-wide reusable CI for the zyplux organization"
requires-python = ">=3.14"

[tool.uv]
package = false

[tool.uv.workspace]
members = ["apps/copilot-review-gate"]

[tool.pytest.ini_options]
testpaths = ["tests/copilot-review-gate"]

[tool.vulture]
paths = ["apps/copilot-review-gate/src", "tests/copilot-review-gate"]

[dependency-groups]
lint = [
    "ruff>=0.15.20",
    "rumdl>=0.2.26",
    "vulture>=2.16",
    "zyplux-cerberus>=0.5.1",
]
test = ["pytest>=9.1.1"]
type = ["pyrefly>=1.1.1"]
